# composable

./: .gitignore  .gitmodules  CLA  LICENSE  README.md  pyproject.toml  run_api.sh
app/composable/: .env.example  .eslintrc.json  README.md  lint.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test.html  test2.html  tsconfig.json
app/composable/src/: App.tsx
app/composable/src/app/: header.tsx  layout.tsx  opengraph-image.tsx  page.tsx
app/composable/src/app/docs/: opengraph-image.tsx  page.tsx
app/composable/src/app/hub/: opengraph-image.tsx  page.tsx
app/composable/src/app/publish/: page.tsx
app/composable/src/app/work/: page.tsx
app/composable/src/components/: Layout.tsx  TaskCard.tsx  Workspace.tsx  header.tsx  layout.server.tsx  og-image.tsx  savedItems.tsx  searchColumn.tsx  workspace.tsx
app/composable/src/components/docs/: Docs.tsx
app/composable/src/components/editor/: editor.tsx  index.tsx  samples.ts  styles.scss
app/composable/src/components/footer/: Footer.tsx
app/composable/src/components/header/: AiModelSelector.tsx  Header.tsx  Navigation.tsx  ThemePicker.tsx
app/composable/src/lib/: cmn.ts  context.ts  context.tsx  dataUtils.ts  db.ts  editor.ts  embedding.ts  getData.ts  getURL.ts  models.ts  types.ts  utils.ts  version.ts
app/composable/src/styles/: editor.scss  publish.scss  script.scss
app/next/: next.config.js  package.json  tsconfig.json
app/next/app/: header.tsx  layout.tsx  page.tsx  providers.tsx  sidebar.tsx  workspace.tsx
app/next/app/styles/: fonts.ts
app/novel2/: package.json
app/novel2/app/: header.tsx  layout.tsx  menu.tsx  page.tsx  sidebar.tsx  workspace.tsx
app/novel2/ui/editor/: index.tsx  kit.ts
composable/: __init__.py  cmn.py
composable/api/: main.py
composable/api/routes/: __init__.py  edgar.py  filings.py  social.py
composable/cmn/: __init__.py  cmn.py  db_utils.py  utils.py
composable/services/: a-tools-defs.md  edgar.py  embeddings.py  excerpts.py  filings.py
composable/services/_excerpts/pgvector/: db.py  schema.sql
etc/nginx/sites-available/: api  api.conf  default
langwave/: __init__.py  cmn.py
langwave/chains/: chat.py
langwave/document_loaders/sec/: qk_html.py
langwave/memory/: __init__.py
workshop/: console.py  edgar.py  filing.py  first.py  hub-embeddings.py
(+46 files in other folders)
