[tool.poetry]
name = "composable"
version = "0.1.0"
description = ""
authors = ["bxxd <bxxd.eth@gmail.com>"]
readme = "README.md"
packages = [
    { include = "langwave/langwave/**/*" },
    { include = "composable/**/*" },
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.245"
termcolor = "^2.3.0"
environs = "^9.5.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
pydantic = "^1.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.package]]
# include = ["composable/**/*", "langwave/langwave/**/*"]
